base: SystemUI: add tuner switch to hide qs info header
ugly and I dont need to see that info there

Change-Id: I88d093f247dae87c89c2309c24ebe0eab3f6d6c0
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/packages/SystemUI/res/values/du_strings.xml
+++ b/packages/SystemUI/res/values/du_strings.xml
@@ -41,6 +41,7 @@
 
     <!-- SystemUI tuner -->
     <string name="systemui_tuner_navbar_title">Layout</string>
+    <string name="tuner_show_info_header_title">Show information header</string>
 
     <!-- Screenshot tile -->
     <string name="screenshot_abort_title">No screenshot taken</string>
