--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -3587,4 +3587,7 @@
 
     <!-- Set interval to trigger idleMaint -->
     <integer name="config_idleMaintSecs">0</integer>
+
+    <!-- Enable Zram writeback feature to allow unused pages in zram be written to flash. -->
+    <bool name="config_zramWriteback">true</bool>
 </resources>
