--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -3433,4 +3433,6 @@
   <java-symbol type="bool" name="config_proximityCheckOnFingerprintWake" />
 
   <java-symbol type="integer" name="config_idleMaintSecs" />
+
+  <java-symbol type="bool" name="config_zramWriteback" />
 </resources>
